--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/icons/logo.png" type="image/x-icon">
     <title>Leader Board CSS3</title>
     <!-- style sheet -->
     <link rel="stylesheet" href="css/styles.css">
@@ -13,10 +15,32 @@
 <body>
     <!-- header start  -->
     <header>
-        <nav>
-
+        <!-- Navbar -->
+        <nav class="navbar fixed-top">
+            <div class="navbar-container">
+                <!-- Logo -->
+                <div class="navbar-brand">
+                    <a href="#" class="navbar-brand-logo">
+                        <img src="images/icons/logo.png" alt="Leader Board Logo">
+                        <!-- <span>Leader Board</span> -->
+                    </a>
+                </div>
+                <div id="toggle" class="responsive-menu">
+                    <button class="btn-responsive"><i class="fas fa-bars"></i></button>
+                </div>
+                <div id="menu" class="navbar-menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link">Link-1</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Link-2</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Link-3</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Link-4</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Link-5</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
+    
     <!-- header End -->
     <!-- main start  -->
     <main>
