--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 </head>
 <body>
     <!-- header start  -->
-    <header>
-        <!-- Navbar -->
+    <header><!-- Navbar -->
         <nav class="navbar fixed-top">
             <div class="navbar-container">
                 <!-- Logo -->
@@ -26,15 +25,18 @@
                     </a>
                 </div>
                 <div id="toggle" class="responsive-menu">
-                    <button class="btn-responsive"><i class="fas fa-bars"></i></button>
+                    <button class="btn-responsive" onclick="responsive()">
+                        <i id="bar" class="fas fa-bars"></i>
+                        <!-- <i id="close" class="fas fa-times"></i> -->
+                    </button>
                 </div>
                 <div id="menu" class="navbar-menu">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Link-1</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Link-2</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Link-3</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Link-4</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Link-5</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Courses</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Blogs</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">About Us</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -201,6 +203,42 @@
                 </div>
             </div>
         </section>
+        <section class="container">
+            <div class="contact-title-section">
+                <h3 class="section-title">Contact Us</h3>
+                <p>If You have any query, Leave us a message we will contact you</p>
+            </div>
+            <div class="contacts">
+                    <div class="contact-image">
+                        <img src="images/icons/contact.png" alt="Contact">
+                    </div>
+                <div class="contact-form">
+                    <form action="">
+                        <div class="contact">
+                            <form action="" method="post">
+                                <div class="input-box">
+                                    <label for="Name">Name</label>
+                                    <input type="text" name="name" placeholder="Name" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="Email">Phone</label>
+                                    <input type="text" name="phone" placeholder="+8801926294263" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="Email">Email</label>
+                                    <input type="email" name="email" placeholder="yourmail@domain.com" required>
+                                </div>
+                                <div class="input-box">
+                                    <label for="Message">Message</label>
+                                    <textarea name="message" id="" rows="5" placeholder="Your Message" required></textarea>
+                                </div>
+                                <button class="contact-btn" name="send">SEND</button>
+                            </form>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- Main End  -->
     <!-- Footer start  -->
@@ -208,5 +246,16 @@
         <p>Copywright @ S Imran Ahmed. All right reserved 1996</p>
     </footer>
     <!-- Footer End -->
+    <script>
+        function responsive() {
+          var x = document.getElementById("toggle");
+          var y = document.getElementById("menu");
+          if (y.className === "navbar-menu") {
+            y.className += " come";
+          } else {
+            y.className = "navbar-menu";
+          }
+        }
+        </script>
 </body>
 </html>
