--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 <body>
     <!-- header start  -->
-    <header><!-- Navbar -->
-        <nav class="navbar fixed-top">
+    <header class="fixed-top"><!-- Navbar -->
+        <nav class="navbar">
             <div class="navbar-container">
                 <!-- Logo -->
                 <div class="navbar-brand">
