--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <!-- header start  -->
-    <header class="fixed-top"><!-- Navbar -->
+    <header class="fixed-top">
+        <!-- Navbar -->
         <nav class="navbar">
             <div class="navbar-container">
                 <!-- Logo -->
