--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
                                     <label for="Message">Message</label>
                                     <textarea name="message" id="" rows="5" placeholder="Your Message" required></textarea>
                                 </div>
-                                <button class="contact-btn" name="send">SEND</button>
+                                <button class="contact-btn" name="send"><span class="button-helper"></span>SEND</button>
+                                <!-- <button class="contact-btn" name="send">SEND</button> -->
                             </form>
                         </div>
                     </form>
